// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div
  style={
    Object {
      "height": "400px",
    }
  }
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Template__TemplateWrapper-sc-1i4nzbu-1 crhamu"
    id="Template C_01"
    rows={null}
  >
    <section
      className="Template__Region-sc-1i4nzbu-0 dTdDpu"
      id="A"
      placeholder="A"
      tabIndex="0"
    >
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "height": "100%",
            "justifyContent": "center",
          }
        }
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 iYDwFP"
          fontSize="1.2rem"
          fontWeight="400"
          letterSpacing="1px"
        >
          A
        </h6>
      </div>
    </section>
    <section
      className="Template__Region-sc-1i4nzbu-0 gkcTUR"
      id="B"
      placeholder="B"
      tabIndex="0"
    >
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "height": "100%",
            "justifyContent": "center",
          }
        }
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 iYDwFP"
          fontSize="1.2rem"
          fontWeight="400"
          letterSpacing="1px"
        >
          B
        </h6>
      </div>
    </section>
    <section
      className="Template__Region-sc-1i4nzbu-0 PYOFM"
      id="C"
      placeholder="C"
      tabIndex="0"
    >
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "height": "100%",
            "justifyContent": "center",
          }
        }
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 iYDwFP"
          fontSize="1.2rem"
          fontWeight="400"
          letterSpacing="1px"
        >
          C
        </h6>
      </div>
    </section>
  </section>
</div>
`;

exports[` 2`] = `
<div
  style={
    Object {
      "height": "400px",
    }
  }
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Template__TemplateWrapper-sc-1i4nzbu-1 eRUJKE"
    id="Template C_02"
    rows={null}
  >
    <section
      className="Template__Region-sc-1i4nzbu-0 dTdDpu"
      id="A"
      placeholder="A"
      tabIndex="0"
    >
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "height": "100%",
            "justifyContent": "center",
          }
        }
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 iYDwFP"
          fontSize="1.2rem"
          fontWeight="400"
          letterSpacing="1px"
        >
          A
        </h6>
      </div>
    </section>
    <section
      className="Template__Region-sc-1i4nzbu-0 gkcTUR"
      id="B"
      placeholder="B"
      tabIndex="0"
    >
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "height": "100%",
            "justifyContent": "center",
          }
        }
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 iYDwFP"
          fontSize="1.2rem"
          fontWeight="400"
          letterSpacing="1px"
        >
          B
        </h6>
      </div>
    </section>
    <section
      className="Template__Region-sc-1i4nzbu-0 PYOFM"
      id="C"
      placeholder="C"
      tabIndex="0"
    >
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "height": "100%",
            "justifyContent": "center",
          }
        }
      >
        <h6
          className="Typography__TitleText-sc-19auepv-2 iYDwFP"
          fontSize="1.2rem"
          fontWeight="400"
          letterSpacing="1px"
        >
          C
        </h6>
      </div>
    </section>
  </section>
</div>
`;
